[package]
name = "smarket"
version = "0.1.0"
authors = ["Jeffrey Yu <92849+wehjin@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
echo-lib = { git = "https://github.com/wehjin/gal-core.git" }
rand = "0.7.3"
